完善个性化页，保存个性化设置

--- a/StorageSystem/appsettings.json
+++ b/StorageSystem/appsettings.json
@@ -43,5 +43,8 @@
             "CountsOfLayer": 10
         }
     ],
-    "InitStorage": true
+    "InitStorage": true,
+    "WebUrl": "http://localhost:5000/",
+    "IsDarkMode": "true",
+    "Color": "#FF4A148C"
 }
